# ronek

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
conda/: env.yml
examples/: README.md
examples/RVC_O3/: test_cg copy.ipynb  test_cg.ipynb
examples/utils/: __init__.py  plotting.py  solving.py
examples_old/: README.md
ronek/: __init__.py  backend.py  bal_trunc.py  bpod.py  const.py  env.py  ops.py  trajgen.py  utils.py
ronek/argon_plasma/: kinetics.py  mixture.py  model.py  species.py  test.ipynb  test_species.ipynb
ronek/argon_plasma_new/: kinetics.py  mixture.py  model.py  test.ipynb  test_species.ipynb
ronek/bpod/: __init__.py  basic.py  linear.py  nonlinear.py
ronek/ops/: __init__.py
ronek/optimization/: __init__.py  line_searcher.py  trainer.py
ronek/plasmas/: __init__.py  chem_eq.py  mixture.py  species.py  test.ipynb
ronek/plasmas_np/: species.py  test.ipynb
ronek/postproc/: __init__.py  animation.py  plotting.py
ronek/postproc_old/: plotting.py
ronek/roms/: __init__.py  balanced_truncation.py  coarse_graining.py  coarse_graining_m0.py  coarse_graining_m1.py  lin_cobras.py  multi_temperature.py  test_svd_lowrank.ipynb
ronek/roms_new/: __init__.py  (+2 more)
ronek2/: __init__.py  const.py  utils.py
scripts/: visual_rom.py
test/: basic.py  test_ad copy.ipynb  test_ad.ipynb  test_cobras.ipynb  test_iso copy 2.ipynb  test_iso.ipynb  test_iso_doped.ipynb
trash/: basic.py  box_iso_doped.py  clustering copy.ipynb  clustering.ipynb  equilibrium copy.py  equilibrium.py  jac_c.txt  jac_c_iso.txt  jac_w.txt  rsvd.py  test copy.ipynb  test.ipynb  test_ad_old.ipynb  test_iso.ipynb  test_iso_doped.ipynb
(+284 files in other folders)
